Change header from 'World Game Hub' to 'Beta Games'

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ button:hover{background:#00cccc;}
 
 <body>
 
-<h1>🌍 World Game Hub</h1>
+<h1>🌍 Beta Games</h1>
 
 <div id="menu">
     <div class="gameTile" onclick="openGame('xo')">
